--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Shikang
 middle_name: 
 last_name: Peng
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Please feel free to reach out if you are interested in collaboration
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
