--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -9,17 +9,9 @@
 email: speng@research.baycrest.org # your email address
 github_username: shikangpeng
 # gitlab_username: # your GitLab user name
-inspirehep_id: 1010907 # Inspire HEP author ID
-linkedin_username: shikangpeng
+linkedin_username: shikang-peng
 orcid_id: 0000-0002-0969-9642
 # osf_id: # your OSF ID
-# research_gate_profile: # your profile on ResearchGate
-# rss_icon: true # comment this line to hide the RSS icon
 scholar_userid: WQhhDeEAAAAJ # your Google Scholar ID
 # semanticscholar_id: # your Semantic Scholar ID
 x_username: shikang_peng
-
-custom_social: # can be any name here other than the ones already defined above
-  logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
-  title: Custom Social
-  url: https://www.alberteinstein.com/
